Win: Fix crashes when initializing GPU thread

GLSurfaceQtWGL does need PBuffer support to actually create a
surface. Make sure that the appropriate OpenGL extensions are
initialized already early on.

Before the patch, function pointers to the PBuffer extensions
were only retrieved in DriverWGL::InitializeExtensionBindings().
However, GpuInit::InitializeInProcess does assume that an
offscreen GL surface can be generated even before this is called.

Task-number: QTBUG-66668
Change-Id: I2dc881a9a04733c0edf000a5d4f582009fd7eb92
Reviewed-by: Michal Klocek <michal.klocek@qt.io>